example/invalid/syntaxErr/struct&reference/invalidStructName.wacc
# invalid struct name

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  struct 1a7 
    int x;
    int y
  end
end